@@ -57,3 +57,12 @@ windows:
 javac --module-path ./lib/javafx-sdk-23.0.1/lib --add-modules javafx.controls,javafx.fxml -classpath .;window-mysql-connector/* main/*.java
 
 java --module-path ./lib/javafx-sdk-23.0.1/lib --add-modules javafx.controls,javafx.fxml -classpath .;window-mysql-connector/* main.Main
+
+Windows-JUnit-Tests:
+javac --module-path ./lib/javafx-sdk-23.0.1/lib --add-modules javafx.controls,javafx.fxml -cp ".;lib/junit/*;main/*;window-mysql-connector/*" -d bin main/*.java
+
+
+java --module-path ./lib/javafx-sdk-23.0.1/lib --add-modules javafx.controls,javafx.fxml -cp ".;lib/junit/*;main/*;window-mysql-connector/*" main.Main
+
+
+java -cp "lib/junit/*;main" org.junit.platform.console.ConsoleLauncher --scan-class-path
